  (Chris Jones)
- Added PREG_BAD_UTF8_OFFSET_ERROR constant. (Nuno)
- Added request_order INI variable to control specifically $_REQUEST 
  behavior. (Stas)
- Added forward_static_call(_array) to complete LSB. (Mike Lively)
- Added Windows support for asinh(), acosh(), atanh(), log1p() and expm1() (Kalle)

- Improved PHP runtime speed and memory usage:
  . Lazy EG(active_symbol_table) initialization. (Dmitry)
  . Optimized ZEND_RETURN opcode to not allocate and copy return value if it is
    not used. (Dmitry)
  . Replaced flex based scanner with re2c based scanner. (Marcus, Nuno, Scott)
  . Added garbage collector. (David Wang, Dmitry).
  . Improved PHP binary size and startup speed with GCC4 visibility control.
    (Nuno)
  . Improved engine stack implementation for better performance and stability.
    (Dmitry)
  . Improved memory usage by moving constants to read only memory.
    (Dmitry, Pierre)
  . Changed exception handling. Now each op_array doesn't contain
    ZEND_HANDLE_EXCEPTION opcode in the end. (Dmitry)
  . Optimized require_once() and include_once() by eliminating fopen(3) on
    second usage. (Dmitry)
  . Optimized ZEND_FETCH_CLASS + ZEND_ADD_INTERFACE into single
    ZEND_ADD_INTERFACE opcode (Dmitry)
- Improved php.ini handling: (Jani)
  . Added ".htaccess" style user-defined php.ini files support for CGI/FastCGI
  . Added support for special [PATH=/opt/httpd/www.example.com/] and
    [HOST=www.example.com] sections. Directives set in these sections can
    not be overridden by user-defined ini-files or during runtime.
  . Added better error reporting for php.ini syntax errors
  . Allowed using full path to load modules using "extension" directive
  . Allowed "ini-variables" to be used almost everywhere ini php.ini files
  . Allowed using alphanumeric/variable indexes in "array" ini options
  . Added 3rd optional parameter to parse_ini_file() to specify the scanning
    mode of INI_SCANNER_NORMAL or INI_SCANNER_RAW. In raw mode option values