@@ -109,6 +109,7 @@
 - Added Windows support for asinh(), acosh(), atanh(), log1p() and expm1() (Kalle)
 
 - Improved PHP runtime speed and memory usage:
+  . Use ZEND_FREE() opcode instead of ZEND_SWITCH_FREE(IS_TMP_VAR). (Dmitry)
   . Lazy EG(active_symbol_table) initialization. (Dmitry)
   . Optimized ZEND_RETURN opcode to not allocate and copy return value if it is
     not used. (Dmitry)
@@ -169,6 +170,8 @@
 - Fixed an issue in date() where a : was printed for the O modifier after a P
   modifier was used. (Derick)
 
+- Fixed bug #44913 (Segfault when using return in combination with nested loops
+  and continue 2). (Dmitry)
 - Fixed bug #44899 (__isset usage changes behavior of empty()) (Etienne)
 - Fixed bug #44805 (rename() function is not portable to Windows). (Pierre)
 - Fixed bug #44742 (timezone_offset_get() causes segmentation faults). (Derick)
